<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_tab_search"
        android:title="@string/tab_search" />
    <item
        android:id="@+id/nav_music"
        android:icon="@drawable/ic_tab_music"
        android:title="@string/tab_music" />
    <item
        android:id="@+id/nav_cinema"
        android:icon="@drawable/ic_tab_cinema"
        android:title="@string/tab_cinema" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_tab_fav"
        android:title="@string/tab_favorites" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_tab_library"
        android:title="@string/tab_library" />
</menu>
